Fix player player on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -12,7 +12,7 @@
     }
     .fa-share-alt{
       left: 7px;
-      bottom: 44px;
+      bottom: 58px;
     }
     .mobiledis{
         display: block;
